Add auth docs
